# my_logger

./: README.md  pyproject.toml
.github/workflows/: branch_patch_version_bump.yml  branch_tag_release.yml  python-publish.yml
src/com_digitalruiz_my_logger/: my_logger.py
src/com_digitalruiz_my_logger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pass.py
