[project]
name = "com_digitalruiz_my_logger"
version = "0.0.3"
authors = [
  { name="Reyes Ruiz", email="reyes@digitalruiz.com" },
]
description = "A small package to set up logging on other scripts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/reyesruiz/my_logger"
"Bug Tracker" = "https://github.com/reyesruiz/my_logger/issues"
